--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       align-items: center;
       text-align: center;
       padding: 20px;
+      position: relative;
+      z-index: 1;
     }
 
     .logo {
@@ -50,21 +52,41 @@
     .gallery {
       height: 100vh;
       position: relative;
+      overflow: hidden;
     }
 
     .gallery img {
       position: absolute;
-      top: 0; left: 0;
-      width: 100%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      max-width: 100%;
+      max-height: 100%;
+      width: auto;
       height: 100%;
-      object-fit: cover;
       opacity: 0;
       transition: opacity 1.5s ease-in-out;
       z-index: 0;
+      object-fit: contain;
+      background-color: black;
     }
 
     .gallery img.active {
       opacity: 1;
+    }
+
+    @media screen and (max-width: 600px) {
+      .logo {
+        width: 150px;
+      }
+
+      .coming-soon {
+        font-size: 20px;
+      }
+
+      .insta a {
+        font-size: 16px;
+      }
     }
   </style>
 </head>
