--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+      background-color: black;
       color: white;
       overflow-x: hidden;
     }
@@ -26,13 +26,13 @@
     }
 
     .logo {
-      width: 200px;
-      max-width: 80%;
-      margin-bottom: 20px;
+      width: 320px;
+      max-width: 90%;
+      margin-bottom: 30px;
     }
 
     .coming-soon {
-      font-size: 26px;
+      font-size: 28px;
       margin: 10px 0 20px;
     }
 
@@ -77,11 +77,11 @@
 
     @media screen and (max-width: 600px) {
       .logo {
-        width: 150px;
+        width: 240px;
       }
 
       .coming-soon {
-        font-size: 20px;
+        font-size: 22px;
       }
 
       .insta a {
