--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TK Ridez - Coming Soon</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: 'Orbitron', sans-serif;
       background-color: black;
       color: white;
       overflow-x: hidden;
@@ -33,7 +34,9 @@
 
     .coming-soon {
       font-size: 28px;
+      font-weight: 700;
       margin: 10px 0 20px;
+      letter-spacing: 1px;
     }
 
     .insta a {
@@ -43,6 +46,7 @@
       display: inline-flex;
       align-items: center;
       gap: 8px;
+      font-weight: 400;
     }
 
     .insta img {
